--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>my-second-repo</h1>
+    <h3>this is git</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fuga dolorem magnam animi et odit labore beatae mollitia incidunt totam!
+    </p>
 </body>
 </html>
